# jax-baseline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirement.txt  requirements.txt  run_dpg.py  run_pg.py  run_qnet.py  setup.py  test_qnet.py
adapters/: pyproject.toml
adapters/src/: env_builder  model_builder  replay_memory
config/: DQN.json
docs/: dpg_comparison.md  dqn_100k.md  dqn_5m.md  make_plot_dpg.py  make_plot_dpg_5m.py  make_plot_dqn_100k.py  make_plot_dqn_5m.py  plot_utils.py
docs/adr/: 0005-bulk-learner-pulse-for-local-off-policy-throughput.md  0006-canonical-dict-observation-contract.md
env_builder/: __init__.py  atari_wrappers.py  env_builder.py  observations.py  seeding.py
experiments/: __init__.py  checkpoint_store.py  distributed_runtime.py  optimizers.py  replay_factories.py  runtime_adapters.py
experiments/cli/: __init__.py  _common.py  _loggers.py  _run.py  apex_dpg.py  apex_qnet.py  dashboard.py  dpg.py  exp.py  impala.py  pg.py  qnet.py
experiments/configs/: apex.yaml  apex_dpg.yaml  dpg_humanoid.yaml  dpg_humanoid_32_vec_env.yaml  dpg_walker2d.yaml  dqn_acrobot.yaml  dqn_asterix.yaml  dqn_asterix100k.yaml  dqn_asterix_8_vec_env.yaml  dqn_breakout.yaml  dqn_breakout100k.yaml  dqn_breakout_8_vec_env.yaml  dqn_seaquest.yaml  dqn_seaquest_8_vec_env.yaml  impala_bipedal.yaml  impala_breakout.yaml  impala_breakout_ppo.yaml  m-dqn_breakout.yaml  pg_breakout.yaml  pg_lunarlander.yaml  ppo.yaml  rainbow_dqn_breakout.yaml  xqc.yaml
experiments/loggers/: __init__.py  aim_logger.py  wandb_logger.py
haiku_baselines/: __init__.py
haiku_baselines/A2C/: a2c.py  base_class.py  impala.py  network.py
haiku_baselines/ACER/: acer.py  buffer.py  network.py
haiku_baselines/APE_X/: base_class.py  dpg_base_class.py  dpg_worker.py  worker.py
haiku_baselines/Ape-X/: base_class.py
haiku_baselines/C51/: apex_c51.py  c51.py  network.py
haiku_baselines/DDPG/: apex_ddpg.py  base_class.py  ddpg.py  network.py  ou_noise.py
haiku_baselines/DQN/: apex_dqn.py  base_class.py  dqn.py  network.py
haiku_baselines/FQF/: fqf.py  network.py
haiku_baselines/IMPALA/: base_class.py  cpprb_buffer.py  cpprb_buffers.py  trainer.py  worker.py
haiku_baselines/IQA_TQC/: iqa_tqc.py  network.py
haiku_baselines/IQN/: iqn.py  network.py
haiku_baselines/PPO/: __init__.py  impala_ppo.py  network.py  ppo.py
haiku_baselines/QRDQN/: apex_qrdqn.py  network.py  qrdqn.py
haiku_baselines/SAC/: network.py  sac.py
haiku_baselines/TD3/: apex_td3.py  network.py  td3.py
haiku_baselines/TD4_IQN/: network.py  td4_iqn.py
haiku_baselines/TD4_QR/: network.py  td4_qr.py
haiku_baselines/TPPO/: impala_tppo.py  network.py  tppo.py
haiku_baselines/TQC/: network.py  tqc.py
haiku_baselines/TQC_IQN/: network.py  tqc_iqn.py
haiku_baselines/TRPO/: network.py  trpo.py
haiku_baselines/common/: Module.py  atari_wrappers.py  base_classes.py  buffers.py  cpprb_buffers.py  layers.py  losses.py  optimizer.py  schedules.py  segment_tree.py  utils.py  worker.py  wrappers.py
jax_baselines/: __init__.py
jax_baselines/A2C/: a2c.py  base_class.py  impala.py  network.py  surrogate_base.py
jax_baselines/ACER/: acer.py  buffer.py  network.py
jax_baselines/APE_X/: base_class.py  common_servers.py  dpg_base_class.py  dpg_worker.py  exploration.py  worker.py
jax_baselines/BBF/: bbf.py  bbf_iqn.py  hl_gauss_bbf.py
jax_baselines/BRO/: __init__.py  bro.py
jax_baselines/C51/: apex_c51.py  c51.py  hl_gauss_c51.py  network.py
jax_baselines/CrossQ/: crossq.py  crossq_tqc.py
jax_baselines/DAC/: __init__.py  dac.py
jax_baselines/DDPG/: apex_ddpg.py  base_class.py  ddpg.py  lifecycle.py  ou_noise.py  training.py
jax_baselines/DQN/: apex_dqn.py  base_class.py  dqn.py  lifecycle.py  network.py  training.py
jax_baselines/FQF/: fqf.py  network.py
jax_baselines/IMPALA/: base_class.py  cpprb_buffers.py  impala_ppo.py  surrogate_base.py  worker.py  (+2 more)
model_builder/: utils.py
replay_memory/: __init__.py  cpprb_buffers.py  frame_buffers.py  impala_buffers.py  replay_factory.py  transition_buffers.py
test/: make_plot.py  run_apex_dpg.py  run_apex_qnet.py  run_dpg.py  run_impala.py  run_pg.py  run_qnet.py  test_a2c_breakout.sh  test_apex.sh  test_apex_dpg.sh  test_atari_wrapper.py  test_cpprb_buffer.py  test_cpprb_nstep_transition.py  test_dpg.sh  test_dpg_Humanoid.sh  test_dpg_bipedal.sh  test_dpg_walker.sh  test_dpg_walker2d.sh  test_dqn.sh  test_dqn_acrobot.sh  test_dqn_asterix.sh  test_dqn_asterix100k.sh  test_dqn_breakout.sh  test_dqn_breakout100k.sh  test_dqn_breakout_fast.sh  test_dqn_chopper.sh  test_dqn_chopper100k.sh  test_dqn_gridworld.sh  test_dqn_seaquest.sh  test_impala.sh  test_impala_bipedal.sh  test_impala_breakout.sh  test_impala_breakout_ppo.sh  test_iqn.sh  test_m-dqn_breakout.sh  test_pg_breakout.sh  test_pg_gridworld.sh  test_pg_lunarlander.sh  test_ppo.sh  test_qnet.py  (+3 more)
tests/: conftest.py  test_advantage_normalize_scope.py  test_apex_c51_priority_projection.py  test_apex_munchausen_convergence.py  test_apex_run_name_default.py  test_apex_train_step_scaffold.py  test_apex_worker_epsilons.py  test_apex_worker_run_args.py  test_atari_wrapper.py  test_bbf_ctor_arg_forwarding.py  test_c51_per_weights.py  test_checkpoint_controller.py  test_checkpoint_factory.py  test_checkpoint_state.py  test_checkpoint_store_adapter.py  test_cli_dpg_registry.py  test_cli_env_config.py  test_common_split_contract.py  test_common_utils.py  test_cpprb_compress.py  test_cpprb_nstep_transition.py  test_dashboard.py  test_dict_observation_contract.py  test_distributed_lifecycle_cleanup.py  test_distributed_runtime_adapter_protocol.py  test_distributed_runtime_protocol_type.py  test_distributed_worker_injection.py  test_distributional.py  test_dpg_entropy_coef.py  test_dpg_lifecycle.py  test_dpg_training.py  test_entropy_and_cvar_fixes.py  test_env_builder_adapter.py  test_exp_cli.py  test_experiment_optimizers.py  test_flax_dpg_builder_param_tree.py  test_frame_buffer.py  test_gae_shape_contract.py  test_haiku_dpg_builder_param_tree.py  test_hl_gauss.py  (+34 more)
(+273 files in other folders)
