[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_baselines"
version = "0.0.1"
description = "JAX-based reinforcement learning algorithm implementations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "requests",
    "protobuf",
    "swig",
    "gymnasium",
    "gymnasium[atari,box2d,mujoco]",
    "autorom[accept-rom-license]",
    "mujoco",
    "box2d",
    "box2d-py",
    "box2d-kengz",
    "tensorboardX",
    "jax[cuda12]",
    "dm_pix",
    "dm-haiku",
    "flax",
    "equinox",
    "scipy",
    "optax",
    "numpy",
    "ray[default]",
    "cpprb",
    "imageio-ffmpeg",
    "ffmpeg",
    "moviepy",
    "decorator",
    "opencv-python",
    "envpool",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
qnet = "experiments.cli.qnet:main"
dpg = "experiments.cli.dpg:main"
pg = "experiments.cli.pg:main"
impala = "experiments.cli.impala:main"
apex-qnet = "experiments.cli.apex_qnet:main"
apex-dpg = "experiments.cli.apex_dpg:main"
exp = "experiments.cli.exp:main"
dashboard = "experiments.cli.dashboard:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    # Logging backends (--logger wandb/aim) and the TensorBoard viewer (`dashboard`),
    # installed by `uv sync` so the console scripts work from a checkout. tensorboard
    # imports pkg_resources, which setuptools<81 still bundles (81+ dropped it).
    "wandb",
    "aim",
    "tensorboard",
    "setuptools<81",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = [
    "env_builder*",
    "experiments*",
    "jax_baselines*",
    "model_builder*",
    "replay_memory*",
]

[tool.uv]
package = true

[tool.uv.sources]
cpprb = { git = "https://github.com/tinker495/cpprb" }
