[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_baselines"
version = "0.0.1"
description = "JAX-based reinforcement learning algorithm implementations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "chex",
    "dm_pix",
    "flax",
    "jax",
    "numpy",
    "optax",
]

[dependency-groups]
dev = [
    "jax-baselines-adapters[all]",
    "pre-commit",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["jax_baselines*"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["adapters"]

[tool.uv.sources]
jax-baselines-adapters = { workspace = true }
